chore: Add new article page and update menu styling

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -34,6 +34,7 @@
     "/final/PORTAL/articulo_4.html": "/final/PORTAL/articulo_4.html",
     "/final/PORTAL/articulo_5.html": "/final/PORTAL/articulo_5.html",
     "/final/PORTAL/articulo_6.html": "/final/PORTAL/articulo_6.html",
+    "/final/PORTAL/articulo_7.html": "/final/PORTAL/articulo_7.html",
     "/final/PORTAL/artuculo.html": "/final/PORTAL/artuculo.html",
     "/final/PORTAL/busqueda.html": "/final/PORTAL/busqueda.html",
     "/final/PORTAL/busqueda_1.html": "/final/PORTAL/busqueda_1.html",
