--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -102,6 +102,7 @@
     "/final/assets/documentos/SGC-PO04_Reglamento_Comite_de_Auditoria_v5.pdf": "/final/assets/documentos/SGC-PO04_Reglamento_Comite_de_Auditoria_v5.pdf",
     "/final/assets/documentos/SGC-PO07 Board Regulations v1.pdf": "/final/assets/documentos/SGC-PO07 Board Regulations v1.pdf",
     "/final/assets/documentos/SGC-PO08 JD Policy.pdf": "/final/assets/documentos/SGC-PO08 JD Policy.pdf",
+    "/final/assets/documentos/SGC-PO08 Politica para el nombramiento remuneracion y sucesion de la JD.pdf": "/final/assets/documentos/SGC-PO08 Politica para el nombramiento remuneracion y sucesion de la JD.pdf",
     "/final/assets/documentos/SGC-PO10 Estatutos Asulado v2.pdf": "/final/assets/documentos/SGC-PO10 Estatutos Asulado v2.pdf",
     "/final/assets/documentos/SGC-PO10_Estatutos_Asulado_v3.pdf": "/final/assets/documentos/SGC-PO10_Estatutos_Asulado_v3.pdf",
     "/final/assets/documentos/SOLICITUD-SUSTITUCION-PENSIONAL-ASULADO.pdf": "/final/assets/documentos/SOLICITUD-SUSTITUCION-PENSIONAL-ASULADO.pdf",
