--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -268,6 +268,7 @@
     "/final/assets/images/firma.png": "/final/assets/images/firma.png",
     "/final/assets/images/firma_patricia.jpg": "/final/assets/images/firma_patricia.jpg",
     "/final/assets/images/firma_patricia.png": "/final/assets/images/firma_patricia.png",
+    "/final/assets/images/firma_patricia_blanco.png": "/final/assets/images/firma_patricia_blanco.png",
     "/final/assets/images/firma_patricia_white.png": "/final/assets/images/firma_patricia_white.png",
     "/final/assets/images/gobierno_corporativo_top.webp": "/final/assets/images/gobierno_corporativo_top.webp",
     "/final/assets/images/header_logo.svg": "/final/assets/images/header_logo.svg",
