--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -207,6 +207,7 @@
     "/final/assets/images/banner_GC.webp": "/final/assets/images/banner_GC.webp",
     "/final/assets/images/banner_home.png": "/final/assets/images/banner_home.png",
     "/final/assets/images/banner_home.webp": "/final/assets/images/banner_home.webp",
+    "/final/assets/images/bg_portal_new.webp": "/final/assets/images/bg_portal_new.webp",
     "/final/assets/images/blog/BANNER_MINI_AHORRAR_DINERO.webp": "/final/assets/images/blog/BANNER_MINI_AHORRAR_DINERO.webp",
     "/final/assets/images/blog/BANNER_MINI_AHORRAR_MERCAR.webp": "/final/assets/images/blog/BANNER_MINI_AHORRAR_MERCAR.webp",
     "/final/assets/images/blog/BANNER_MINI_CREAR_PRESUPUESTO.webp": "/final/assets/images/blog/BANNER_MINI_CREAR_PRESUPUESTO.webp",
@@ -384,6 +385,7 @@
     "/final/assets/images/top_solicitudes.webp": "/final/assets/images/top_solicitudes.webp",
     "/final/assets/images/top_suscribete.png": "/final/assets/images/top_suscribete.png",
     "/final/assets/images/top_suscribete.webp": "/final/assets/images/top_suscribete.webp",
+    "/final/assets/images/txt_nuevo.svg": "/final/assets/images/txt_nuevo.svg",
     "/final/assets/images/video_5.jpg": "/final/assets/images/video_5.jpg",
     "/final/assets/images/video_6.jpg": "/final/assets/images/video_6.jpg",
     "/final/assets/images/video_thumb_1.jpg": "/final/assets/images/video_thumb_1.jpg",
