Add video functionality and styling to portal pages

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -64,6 +64,8 @@
     "/final/PORTAL/pqrs_2_consultar1.html": "/final/PORTAL/pqrs_2_consultar1.html",
     "/final/PORTAL/pqrs_iniciar.html": "/final/PORTAL/pqrs_iniciar.html",
     "/final/PORTAL/sesion.html": "/final/PORTAL/sesion.html",
+    "/final/PORTAL/video_1.html": "/final/PORTAL/video_1.html",
+    "/final/PORTAL/videos.html": "/final/PORTAL/videos.html",
     "/final/PORTAL/welcome.html": "/final/PORTAL/welcome.html",
     "/final/assets/css/app.css": "/final/assets/css/app.css",
     "/final/assets/css/app.min.css": "/final/assets/css/app.min.css",
@@ -89,7 +91,7 @@
     "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
     "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf": "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf",
     "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf": "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf",
-    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
+    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
     "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
     "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf": "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf",
     "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3_junio.pdf": "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3_junio.pdf",
@@ -213,7 +215,7 @@
     "/final/assets/images/blog/BANNER_MINI_AHORRAR_MERCAR.webp": "/final/assets/images/blog/BANNER_MINI_AHORRAR_MERCAR.webp",
     "/final/assets/images/blog/BANNER_MINI_CREAR_PRESUPUESTO.webp": "/final/assets/images/blog/BANNER_MINI_CREAR_PRESUPUESTO.webp",
     "/final/assets/images/blog/BANNER_MINI_ESTAFAS_FINANCIERAS.webp": "/final/assets/images/blog/BANNER_MINI_ESTAFAS_FINANCIERAS.webp",
-    "/final/assets/images/blog/BANNER_MINI_PENSIÓN_INVALIDEZ.webp": "/final/assets/images/blog/BANNER_MINI_PENSIÓN_INVALIDEZ.webp",
+    "/final/assets/images/blog/BANNER_MINI_PENSIÓN_INVALIDEZ.webp": "/final/assets/images/blog/BANNER_MINI_PENSIÓN_INVALIDEZ.webp",
     "/final/assets/images/blog/BANNER_MINI_RENTA_VITALICIA.webp": "/final/assets/images/blog/BANNER_MINI_RENTA_VITALICIA.webp",
     "/final/assets/images/blog/b1_1.jpg": "/final/assets/images/blog/b1_1.jpg",
     "/final/assets/images/blog/b1_2.jpg": "/final/assets/images/blog/b1_2.jpg",
@@ -403,6 +405,10 @@
     "/final/assets/js/portal.js.LICENSE.txt": "/final/assets/js/portal.js.LICENSE.txt",
     "/final/assets/js/test4_1_4.js": "/final/assets/js/test4_1_4.js",
     "/final/assets/sitemap.xml": "/final/assets/sitemap.xml",
+    "/final/assets/videos/ActualizarDatos instructions.jpg": "/final/assets/videos/ActualizarDatos instructions.jpg",
+    "/final/assets/videos/ActualizarDatos instructions.mp4": "/final/assets/videos/ActualizarDatos instructions.mp4",
+    "/final/assets/videos/obten_certificado_pension.jpg": "/final/assets/videos/obten_certificado_pension.jpg",
+    "/final/assets/videos/obten_certificado_pension.mp4": "/final/assets/videos/obten_certificado_pension.mp4",
     "/final/asulado_te_guia/index.html": "/final/asulado_te_guia/index.html",
     "/final/blog/5-consejos-para-aprovechar-el-seguro-previsional/index.html": "/final/blog/5-consejos-para-aprovechar-el-seguro-previsional/index.html",
     "/final/blog/como-ahorrar-al-mercar/index.html": "/final/blog/como-ahorrar-al-mercar/index.html",
