--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -351,6 +351,7 @@
     "/final/assets/images/mano_porque.png": "/final/assets/images/mano_porque.png",
     "/final/assets/images/mano_porque.webp": "/final/assets/images/mano_porque.webp",
     "/final/assets/images/novedades.png": "/final/assets/images/novedades.png",
+    "/final/assets/images/portal_1.jpg": "/final/assets/images/portal_1.jpg",
     "/final/assets/images/quees_renta_vitalicia.png": "/final/assets/images/quees_renta_vitalicia.png",
     "/final/assets/images/quees_renta_vitalicia.webp": "/final/assets/images/quees_renta_vitalicia.webp",
     "/final/assets/images/quees_seguro_revisional.webp": "/final/assets/images/quees_seguro_revisional.webp",
