--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -352,6 +352,11 @@
     "/final/assets/images/mano_porque.webp": "/final/assets/images/mano_porque.webp",
     "/final/assets/images/novedades.png": "/final/assets/images/novedades.png",
     "/final/assets/images/portal_1.jpg": "/final/assets/images/portal_1.jpg",
+    "/final/assets/images/portal_2.jpg": "/final/assets/images/portal_2.jpg",
+    "/final/assets/images/portal_3.jpg": "/final/assets/images/portal_3.jpg",
+    "/final/assets/images/portal_4.jpg": "/final/assets/images/portal_4.jpg",
+    "/final/assets/images/portal_5.jpg": "/final/assets/images/portal_5.jpg",
+    "/final/assets/images/portal_6.jpg": "/final/assets/images/portal_6.jpg",
     "/final/assets/images/quees_renta_vitalicia.png": "/final/assets/images/quees_renta_vitalicia.png",
     "/final/assets/images/quees_renta_vitalicia.webp": "/final/assets/images/quees_renta_vitalicia.webp",
     "/final/assets/images/quees_seguro_revisional.webp": "/final/assets/images/quees_seguro_revisional.webp",
