--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -112,6 +112,8 @@
     "/final/assets/documentos/_Codigo-de-etica-y-conducta-Asulado.pdf": "/final/assets/documentos/_Codigo-de-etica-y-conducta-Asulado.pdf",
     "/final/assets/documentos/_Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/final/assets/documentos/_Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
     "/final/assets/documentos/formato-redistribucion-mesada.pdf": "/final/assets/documentos/formato-redistribucion-mesada.pdf",
+    "/final/assets/documentos/previsional-min.pdf": "/final/assets/documentos/previsional-min.pdf",
+    "/final/assets/documentos/vitalicia-min.pdf": "/final/assets/documentos/vitalicia-min.pdf",
     "/final/assets/fonts/0a5eb17cd5d9a87b-s.p.woff": "/final/assets/fonts/0a5eb17cd5d9a87b-s.p.woff",
     "/final/assets/fonts/33112a1a3babe854-s.p.woff": "/final/assets/fonts/33112a1a3babe854-s.p.woff",
     "/final/assets/fonts/60964256366d74f2-s.p.woff": "/final/assets/fonts/60964256366d74f2-s.p.woff",
