--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -405,6 +405,10 @@
     "/final/assets/images/txt_nuevo.svg": "/final/assets/images/txt_nuevo.svg",
     "/final/assets/images/video_5.jpg": "/final/assets/images/video_5.jpg",
     "/final/assets/images/video_6.jpg": "/final/assets/images/video_6.jpg",
+    "/final/assets/images/video_destacado_1.webp": "/final/assets/images/video_destacado_1.webp",
+    "/final/assets/images/video_destacado_2.webp": "/final/assets/images/video_destacado_2.webp",
+    "/final/assets/images/video_destacado_3.webp": "/final/assets/images/video_destacado_3.webp",
+    "/final/assets/images/video_destacado_4.webp": "/final/assets/images/video_destacado_4.webp",
     "/final/assets/images/video_thumb_1.jpg": "/final/assets/images/video_thumb_1.jpg",
     "/final/assets/images/video_thumb_1.webp": "/final/assets/images/video_thumb_1.webp",
     "/final/assets/images/video_thumb_2.webp": "/final/assets/images/video_thumb_2.webp",
