--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -341,6 +341,7 @@
     "/final/assets/images/junta/junta-sebastian.png": "/final/assets/images/junta/junta-sebastian.png",
     "/final/assets/images/junta/junta-stella.png": "/final/assets/images/junta/junta-stella.png",
     "/final/assets/images/junta/junta-tatiana.png": "/final/assets/images/junta/junta-tatiana.png",
+    "/final/assets/images/junta/sebastian_rey.webp": "/final/assets/images/junta/sebastian_rey.webp",
     "/final/assets/images/logo_asulado.svg": "/final/assets/images/logo_asulado.svg",
     "/final/assets/images/logo_col.png": "/final/assets/images/logo_col.png",
     "/final/assets/images/logo_corner.png": "/final/assets/images/logo_corner.png",
