--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -91,7 +91,7 @@
     "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
     "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf": "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf",
     "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf": "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf",
-    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
+    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
     "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
     "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf": "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf",
     "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3_junio.pdf": "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3_junio.pdf",
@@ -217,7 +217,7 @@
     "/final/assets/images/blog/BANNER_MINI_AHORRAR_MERCAR.webp": "/final/assets/images/blog/BANNER_MINI_AHORRAR_MERCAR.webp",
     "/final/assets/images/blog/BANNER_MINI_CREAR_PRESUPUESTO.webp": "/final/assets/images/blog/BANNER_MINI_CREAR_PRESUPUESTO.webp",
     "/final/assets/images/blog/BANNER_MINI_ESTAFAS_FINANCIERAS.webp": "/final/assets/images/blog/BANNER_MINI_ESTAFAS_FINANCIERAS.webp",
-    "/final/assets/images/blog/BANNER_MINI_PENSIÓN_INVALIDEZ.webp": "/final/assets/images/blog/BANNER_MINI_PENSIÓN_INVALIDEZ.webp",
+    "/final/assets/images/blog/BANNER_MINI_PENSIÓN_INVALIDEZ.webp": "/final/assets/images/blog/BANNER_MINI_PENSIÓN_INVALIDEZ.webp",
     "/final/assets/images/blog/BANNER_MINI_RENTA_VITALICIA.webp": "/final/assets/images/blog/BANNER_MINI_RENTA_VITALICIA.webp",
     "/final/assets/images/blog/b1_1.jpg": "/final/assets/images/blog/b1_1.jpg",
     "/final/assets/images/blog/b1_2.jpg": "/final/assets/images/blog/b1_2.jpg",
@@ -366,6 +366,22 @@
     "/final/assets/images/portal_7.jpg": "/final/assets/images/portal_7.jpg",
     "/final/assets/images/portal_8.jpg": "/final/assets/images/portal_8.jpg",
     "/final/assets/images/portal_9.jpg": "/final/assets/images/portal_9.jpg",
+    "/final/assets/images/poster_portal_10.webp": "/final/assets/images/poster_portal_10.webp",
+    "/final/assets/images/poster_portal_11.webp": "/final/assets/images/poster_portal_11.webp",
+    "/final/assets/images/poster_portal_12.webp": "/final/assets/images/poster_portal_12.webp",
+    "/final/assets/images/poster_portal_2.webp": "/final/assets/images/poster_portal_2.webp",
+    "/final/assets/images/poster_portal_4.webp": "/final/assets/images/poster_portal_4.webp",
+    "/final/assets/images/poster_portal_5.webp": "/final/assets/images/poster_portal_5.webp",
+    "/final/assets/images/poster_portal_6.webp": "/final/assets/images/poster_portal_6.webp",
+    "/final/assets/images/poster_portal_7.webp": "/final/assets/images/poster_portal_7.webp",
+    "/final/assets/images/poster_portal_8.webp": "/final/assets/images/poster_portal_8.webp",
+    "/final/assets/images/poster_portal_9.webp": "/final/assets/images/poster_portal_9.webp",
+    "/final/assets/images/poster_video_1.webp": "/final/assets/images/poster_video_1.webp",
+    "/final/assets/images/poster_video_2.webp": "/final/assets/images/poster_video_2.webp",
+    "/final/assets/images/poster_video_3.webp": "/final/assets/images/poster_video_3.webp",
+    "/final/assets/images/poster_video_4.webp": "/final/assets/images/poster_video_4.webp",
+    "/final/assets/images/poster_video_5.webp": "/final/assets/images/poster_video_5.webp",
+    "/final/assets/images/poster_video_6.webp": "/final/assets/images/poster_video_6.webp",
     "/final/assets/images/quees_renta_vitalicia.png": "/final/assets/images/quees_renta_vitalicia.png",
     "/final/assets/images/quees_renta_vitalicia.webp": "/final/assets/images/quees_renta_vitalicia.webp",
     "/final/assets/images/quees_seguro_revisional.webp": "/final/assets/images/quees_seguro_revisional.webp",
