--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -123,6 +123,12 @@
     "/final/assets/fonts/e86cc954d8c82a89-s.p.woff": "/final/assets/fonts/e86cc954d8c82a89-s.p.woff",
     "/final/assets/fonts/ee0063ed4c3236ca-s.p.woff": "/final/assets/fonts/ee0063ed4c3236ca-s.p.woff",
     "/final/assets/images/ASAMBLEA-CARTA_img.webp": "/final/assets/images/ASAMBLEA-CARTA_img.webp",
+    "/final/assets/images/Asulado_Reel_ActDatos_100724ai.webp": "/final/assets/images/Asulado_Reel_ActDatos_100724ai.webp",
+    "/final/assets/images/Asulado_Reel_Certi_Ingresos_082924.webp": "/final/assets/images/Asulado_Reel_Certi_Ingresos_082924.webp",
+    "/final/assets/images/Asulado_Reel_Certi_PortalTransacciones_090524.webp": "/final/assets/images/Asulado_Reel_Certi_PortalTransacciones_090524.webp",
+    "/final/assets/images/Asulado_Reel_Certi_Sobrevivencia_090424.webp": "/final/assets/images/Asulado_Reel_Certi_Sobrevivencia_090424.webp",
+    "/final/assets/images/Asulado_Reel_ColillaPago_130824ai.webp": "/final/assets/images/Asulado_Reel_ColillaPago_130824ai.webp",
+    "/final/assets/images/Asulado_Reel_RestableceContrasena_100724ai.webp": "/final/assets/images/Asulado_Reel_RestableceContrasena_100724ai.webp",
     "/final/assets/images/GC/bg_1.svg": "/final/assets/images/GC/bg_1.svg",
     "/final/assets/images/GC/bg_2.svg": "/final/assets/images/GC/bg_2.svg",
     "/final/assets/images/ILUS1.webp": "/final/assets/images/ILUS1.webp",
