--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -134,6 +134,8 @@
     "/final/assets/images/ILUS1.webp": "/final/assets/images/ILUS1.webp",
     "/final/assets/images/ILUS2.webp": "/final/assets/images/ILUS2.webp",
     "/final/assets/images/ILUS3.webp": "/final/assets/images/ILUS3.webp",
+    "/final/assets/images/Logo-Navidada-Azul.png": "/final/assets/images/Logo-Navidada-Azul.png",
+    "/final/assets/images/MANO.png": "/final/assets/images/MANO.png",
     "/final/assets/images/PORTAL/INTERNA_ACTUALIZACION.webp": "/final/assets/images/PORTAL/INTERNA_ACTUALIZACION.webp",
     "/final/assets/images/PORTAL/INTERNA_CERTIFICADOS.webp": "/final/assets/images/PORTAL/INTERNA_CERTIFICADOS.webp",
     "/final/assets/images/PORTAL/INTERNA_CONTRASENA.webp": "/final/assets/images/PORTAL/INTERNA_CONTRASENA.webp",
@@ -155,6 +157,7 @@
     "/final/assets/images/PORTAL/error_busqueda.png": "/final/assets/images/PORTAL/error_busqueda.png",
     "/final/assets/images/PORTAL/error_mantenimiento.png": "/final/assets/images/PORTAL/error_mantenimiento.png",
     "/final/assets/images/PORTAL/error_saturado.png": "/final/assets/images/PORTAL/error_saturado.png",
+    "/final/assets/images/PORTAL/familia.webp": "/final/assets/images/PORTAL/familia.webp",
     "/final/assets/images/PORTAL/home/ACTUALIZACION_01.webp": "/final/assets/images/PORTAL/home/ACTUALIZACION_01.webp",
     "/final/assets/images/PORTAL/home/ACTUALIZACION_02.webp": "/final/assets/images/PORTAL/home/ACTUALIZACION_02.webp",
     "/final/assets/images/PORTAL/home/CERTIFICADO_01.webp": "/final/assets/images/PORTAL/home/CERTIFICADO_01.webp",
@@ -275,6 +278,8 @@
     "/final/assets/images/ciber/2_3.svg": "/final/assets/images/ciber/2_3.svg",
     "/final/assets/images/ciber/2_4.svg": "/final/assets/images/ciber/2_4.svg",
     "/final/assets/images/comunicado_img.webp": "/final/assets/images/comunicado_img.webp",
+    "/final/assets/images/familia_2.webp": "/final/assets/images/familia_2.webp",
+    "/final/assets/images/familianew.webp": "/final/assets/images/familianew.webp",
     "/final/assets/images/fase.png": "/final/assets/images/fase.png",
     "/final/assets/images/fb.png": "/final/assets/images/fb.png",
     "/final/assets/images/firma.png": "/final/assets/images/firma.png",
