--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -122,6 +122,7 @@
     "/final/assets/fonts/ce9abbd2222b7882-s.p.woff": "/final/assets/fonts/ce9abbd2222b7882-s.p.woff",
     "/final/assets/fonts/e86cc954d8c82a89-s.p.woff": "/final/assets/fonts/e86cc954d8c82a89-s.p.woff",
     "/final/assets/fonts/ee0063ed4c3236ca-s.p.woff": "/final/assets/fonts/ee0063ed4c3236ca-s.p.woff",
+    "/final/assets/images/2nos.png": "/final/assets/images/2nos.png",
     "/final/assets/images/ASAMBLEA-CARTA_img.webp": "/final/assets/images/ASAMBLEA-CARTA_img.webp",
     "/final/assets/images/Asulado_Reel_ActDatos_100724ai.webp": "/final/assets/images/Asulado_Reel_ActDatos_100724ai.webp",
     "/final/assets/images/Asulado_Reel_Certi_Ingresos_082924.webp": "/final/assets/images/Asulado_Reel_Certi_Ingresos_082924.webp",
