--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -130,6 +130,7 @@
     "/final/assets/images/Asulado_Reel_Certi_Sobrevivencia_090424.webp": "/final/assets/images/Asulado_Reel_Certi_Sobrevivencia_090424.webp",
     "/final/assets/images/Asulado_Reel_ColillaPago_130824ai.webp": "/final/assets/images/Asulado_Reel_ColillaPago_130824ai.webp",
     "/final/assets/images/Asulado_Reel_RestableceContrasena_100724ai.webp": "/final/assets/images/Asulado_Reel_RestableceContrasena_100724ai.webp",
+    "/final/assets/images/Asulado_navidad.png": "/final/assets/images/Asulado_navidad.png",
     "/final/assets/images/GC/bg_1.svg": "/final/assets/images/GC/bg_1.svg",
     "/final/assets/images/GC/bg_2.svg": "/final/assets/images/GC/bg_2.svg",
     "/final/assets/images/ILUS1.webp": "/final/assets/images/ILUS1.webp",
@@ -221,6 +222,7 @@
     "/final/assets/images/banner_GC.webp": "/final/assets/images/banner_GC.webp",
     "/final/assets/images/banner_home.png": "/final/assets/images/banner_home.png",
     "/final/assets/images/banner_home.webp": "/final/assets/images/banner_home.webp",
+    "/final/assets/images/banner_navidad_dos.png": "/final/assets/images/banner_navidad_dos.png",
     "/final/assets/images/bg_portal_new.webp": "/final/assets/images/bg_portal_new.webp",
     "/final/assets/images/bg_portal_new_1.png": "/final/assets/images/bg_portal_new_1.png",
     "/final/assets/images/blog/BANNER_MINI_AHORRAR_DINERO.webp": "/final/assets/images/blog/BANNER_MINI_AHORRAR_DINERO.webp",
@@ -365,6 +367,7 @@
     "/final/assets/images/mano_paraque.webp": "/final/assets/images/mano_paraque.webp",
     "/final/assets/images/mano_porque.png": "/final/assets/images/mano_porque.png",
     "/final/assets/images/mano_porque.webp": "/final/assets/images/mano_porque.webp",
+    "/final/assets/images/navidad_banner.png": "/final/assets/images/navidad_banner.png",
     "/final/assets/images/novedades.png": "/final/assets/images/novedades.png",
     "/final/assets/images/portal_1.jpg": "/final/assets/images/portal_1.jpg",
     "/final/assets/images/portal_10.jpg": "/final/assets/images/portal_10.jpg",
