--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -92,7 +92,7 @@
     "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
     "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf": "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf",
     "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf": "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf",
-    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
+    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
     "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
     "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf": "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf",
     "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3_junio.pdf": "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3_junio.pdf",
@@ -211,6 +211,7 @@
     "/final/assets/images/asu-favicon-alt.png": "/final/assets/images/asu-favicon-alt.png",
     "/final/assets/images/asulado_disc.png": "/final/assets/images/asulado_disc.png",
     "/final/assets/images/ayuda.webp": "/final/assets/images/ayuda.webp",
+    "/final/assets/images/banner-salario.webp": "/final/assets/images/banner-salario.webp",
     "/final/assets/images/banner_1_bg.png": "/final/assets/images/banner_1_bg.png",
     "/final/assets/images/banner_1_bg.webp": "/final/assets/images/banner_1_bg.webp",
     "/final/assets/images/banner_1_foto.png": "/final/assets/images/banner_1_foto.png",
@@ -230,7 +231,7 @@
     "/final/assets/images/blog/BANNER_MINI_AHORRAR_MERCAR.webp": "/final/assets/images/blog/BANNER_MINI_AHORRAR_MERCAR.webp",
     "/final/assets/images/blog/BANNER_MINI_CREAR_PRESUPUESTO.webp": "/final/assets/images/blog/BANNER_MINI_CREAR_PRESUPUESTO.webp",
     "/final/assets/images/blog/BANNER_MINI_ESTAFAS_FINANCIERAS.webp": "/final/assets/images/blog/BANNER_MINI_ESTAFAS_FINANCIERAS.webp",
-    "/final/assets/images/blog/BANNER_MINI_PENSIÓN_INVALIDEZ.webp": "/final/assets/images/blog/BANNER_MINI_PENSIÓN_INVALIDEZ.webp",
+    "/final/assets/images/blog/BANNER_MINI_PENSIÓN_INVALIDEZ.webp": "/final/assets/images/blog/BANNER_MINI_PENSIÓN_INVALIDEZ.webp",
     "/final/assets/images/blog/BANNER_MINI_RENTA_VITALICIA.webp": "/final/assets/images/blog/BANNER_MINI_RENTA_VITALICIA.webp",
     "/final/assets/images/blog/b1_1.jpg": "/final/assets/images/blog/b1_1.jpg",
     "/final/assets/images/blog/b1_2.jpg": "/final/assets/images/blog/b1_2.jpg",
