Add banner CSS styles and update mix-manifest.json for new banner integration

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -69,6 +69,7 @@
     "/final/PORTAL/welcome.html": "/final/PORTAL/welcome.html",
     "/final/assets/css/app.css": "/final/assets/css/app.css",
     "/final/assets/css/app.min.css": "/final/assets/css/app.min.css",
+    "/final/assets/css/banner.css": "/final/assets/css/banner.css",
     "/final/assets/css/forms.css": "/final/assets/css/forms.css",
     "/final/assets/css/glide.core.min.css": "/final/assets/css/glide.core.min.css",
     "/final/assets/css/portal.css": "/final/assets/css/portal.css",
