--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -91,10 +91,12 @@
     "/final/assets/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf": "/final/assets/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf",
     "/final/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf": "/final/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf",
     "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
+    "/final/assets/documentos/Politica_de_Seguridad_y_Salud_en_el_Trabajo.pdf": "/final/assets/documentos/Politica_de_Seguridad_y_Salud_en_el_Trabajo.pdf",
     "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf": "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf",
     "/final/assets/documentos/Politica_inversion_sostenible_Asulado.pdf": "/final/assets/documentos/Politica_inversion_sostenible_Asulado.pdf",
     "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf": "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf",
-    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
+    "/final/assets/documentos/Protocolo_prevencion_y_atencion_del_acoso_sexual _laboral.pdf": "/final/assets/documentos/Protocolo_prevencion_y_atencion_del_acoso_sexual _laboral.pdf",
+    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
     "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
     "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf": "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf",
     "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3_junio.pdf": "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3_junio.pdf",
@@ -233,7 +235,7 @@
     "/final/assets/images/blog/BANNER_MINI_AHORRAR_MERCAR.webp": "/final/assets/images/blog/BANNER_MINI_AHORRAR_MERCAR.webp",
     "/final/assets/images/blog/BANNER_MINI_CREAR_PRESUPUESTO.webp": "/final/assets/images/blog/BANNER_MINI_CREAR_PRESUPUESTO.webp",
     "/final/assets/images/blog/BANNER_MINI_ESTAFAS_FINANCIERAS.webp": "/final/assets/images/blog/BANNER_MINI_ESTAFAS_FINANCIERAS.webp",
-    "/final/assets/images/blog/BANNER_MINI_PENSIÓN_INVALIDEZ.webp": "/final/assets/images/blog/BANNER_MINI_PENSIÓN_INVALIDEZ.webp",
+    "/final/assets/images/blog/BANNER_MINI_PENSIÓN_INVALIDEZ.webp": "/final/assets/images/blog/BANNER_MINI_PENSIÓN_INVALIDEZ.webp",
     "/final/assets/images/blog/BANNER_MINI_RENTA_VITALICIA.webp": "/final/assets/images/blog/BANNER_MINI_RENTA_VITALICIA.webp",
     "/final/assets/images/blog/b1_1.jpg": "/final/assets/images/blog/b1_1.jpg",
     "/final/assets/images/blog/b1_2.jpg": "/final/assets/images/blog/b1_2.jpg",
