--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -339,6 +339,7 @@
     "/final/assets/images/img_proposito.png": "/final/assets/images/img_proposito.png",
     "/final/assets/images/img_proposito.webp": "/final/assets/images/img_proposito.webp",
     "/final/assets/images/img_renta.png": "/final/assets/images/img_renta.png",
+    "/final/assets/images/img_salario_minimo.png": "/final/assets/images/img_salario_minimo.png",
     "/final/assets/images/img_seguro.png": "/final/assets/images/img_seguro.png",
     "/final/assets/images/img_slide_1_ciber.png": "/final/assets/images/img_slide_1_ciber.png",
     "/final/assets/images/img_slide_2_ciber.png": "/final/assets/images/img_slide_2_ciber.png",
